Bug 18442 - [4.0 Regression] Rejects attribute((mode(SI))) when using -mint64
Summary: [4.0 Regression] Rejects attribute((mode(SI))) when using -mint64
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.0.0
: P2 normal
Target Milestone: 4.0.0
Assignee: Eric Christopher
URL:
Keywords: rejects-valid
Depends on:
Blocks: 18404 18744
  Show dependency treegraph
 
Reported: 2004-11-12 03:53 UTC by Andrew Pinski
Modified: 2004-12-07 22:21 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work: 3.4.2 3.4.3
Known to fail: 4.0.0
Last reconfirmed: 2004-11-15 07:40:26


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Pinski 2004-11-12 03:53:15 UTC
From PR 18404 (but that was about something else)
Do:
gcc.mips -S -O2 -march=sb1 -mabi=64 -mint64 t.c
on t.c:
typedef signed char t_SI __attribute__ ((__mode__(SI)));
t_SI inc_SI (t_SI v) {
    return ++v;
}
Comment 1 Eric Christopher 2004-12-07 08:25:36 UTC
This came about with the scalar_mode_supported_p work. Patch in testing.
Comment 2 GCC Commits 2004-12-07 22:17:33 UTC
Subject: Bug 18442

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	echristo@gcc.gnu.org	2004-12-07 22:17:25

Modified files:
	gcc            : ChangeLog 
	gcc/config/mips: mips.c 

Log message:
	2004-12-07  Eric Christopher  <echristo@redhat.com>
	
	PR target/18442
	* config/mips/mips.c (mips_vector_mode_supported_p): New function.
	(TARGET_SCALAR_MODE_SUPPORTED_P): Define to above.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.6733&r2=2.6734
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/config/mips/mips.c.diff?cvsroot=gcc&r1=1.478&r2=1.479

Comment 3 Eric Christopher 2004-12-07 22:21:33 UTC
Fixed with above.