re PR target/18442 (Rejects attribute((mode(SI))) when using -mint64)

2004-12-07  Eric Christopher  <echristo@redhat.com>

	PR target/18442
	* config/mips/mips.c (mips_vector_mode_supported_p): New function.
	(TARGET_SCALAR_MODE_SUPPORTED_P): Define to above.

From-SVN: r91820